View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0023064 | Open CASCADE | OCCT:Visualization | public | 2012-04-03 18:47 | 2012-04-16 10:49 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | minor | ||
Status | closed | Resolution | fixed | ||
Product Version | 6.5.3 | ||||
Target Version | 6.5.3 | Fixed in Version | 6.5.3 | ||
Summary | 0023064: MSVC compiler warnings when Freeimage is not used | ||||
Description | When FreeImage library is not used, compilation of OpenGl package produces three compiler warnings (VC++ 8.0): ..\..\..\src\OpenGl\OpenGl_Workspace_2.cxx(609) : warning C4800: 'BOOL' : forcing value to bool 'true' or 'false' (performance warning) ..\..\..\src\OpenGl\OpenGl_Workspace_2.cxx(614) : warning C4800: 'BOOL' : forcing value to bool 'true' or 'false' (performance warning) ..\..\..\src\OpenGl\OpenGl_Workspace_2.cxx(710) : warning C4800: 'BOOL' : forcing value to bool 'true' or 'false' (performance warning) | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
occt: master 6de552e6 2012-04-03 14:54:06
Committer: bugmaster Details Diff |
0023064: MSVC compiler warnings when Freeimage is not used Compiler warning on conversion of BOOL to bool (C4800, VC++ 8.0) generated by code active when HAVE_FREEIMAGE is not defined is avoided in OpenGl_Workspace.cxx |
Affected Issues 0023064 |
|
mod - src/OpenGl/OpenGl_Workspace_2.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2012-04-03 18:47 |
|
New Issue | |
2012-04-03 18:47 |
|
Assigned To | => abv |
2012-04-03 18:55 |
|
Assigned To | abv => gka |
2012-04-03 18:55 |
|
Status | new => resolved |
2012-04-03 18:59 |
|
Note Added: 0020256 | |
2012-04-03 18:59 |
|
Status | resolved => reviewed |
2012-04-04 12:36 |
|
Assigned To | gka => aan |
2012-04-04 12:37 |
|
Test case number | => Not needed |
2012-04-04 17:01 |
|
Assigned To | aan => bugmaster |
2012-04-16 10:48 | bugmaster | Changeset attached | => occt master 6de552e6 |
2012-04-16 10:49 | bugmaster | Status | reviewed => verified |
2012-04-16 10:49 | bugmaster | Resolution | open => fixed |